feat: Criação de rotas e handlers para prioridade. AB#30
